# parametric-viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
